--- a/.envrc
+++ b/.envrc
@@ -6,6 +6,16 @@ export HEX_HOME=$PWD/.nix-mix
 export PATH=$MIX_HOME/bin:$HEX_HOME/bin:$PATH
 export ERL_AFLAGS="-kernel shell_history enabled"
 
+# this allows go to wotk on the local directory
+# Set a project-local GOPATH (legacy support, if needed)
+export GOPATH="$PWD/.gopath"
+mkdir -p "$GOPATH/bin"
+
+export GOBIN="$GOPATH/bin"
+export PATH="$GOBIN:$PATH"
+
+export GO111MODULE=on
+
 export LANG=en_US.UTF-8
 
 use flake
