improve cli compilation and also add contributing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
       token: read
     env:
       MIX_ENV: prod
+      HERMES_MCP_COMPILE_CLI: "true"
     
     steps:
       - name: Checkout code
