--- a/.envrc
+++ b/.envrc
@@ -6,7 +6,7 @@ export HEX_HOME=$PWD/.nix-mix
 export PATH=$MIX_HOME/bin:$HEX_HOME/bin:$PATH
 export ERL_AFLAGS="-kernel shell_history enabled"
 
-# this allows go to wotk on the local directory
+# this allows go to work on the local directory
 # Set a project-local GOPATH (legacy support, if needed)
 export GOPATH="$PWD/.gopath"
 mkdir -p "$GOPATH/bin"
