--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Run Credo
         run: mix credo --strict
 
-  static-analisys:
+  static-analysis:
     runs-on: ubuntu-latest
 
     env:
