update automic version

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -64,7 +64,8 @@
       "release-type": "elixir",
       "extra-files": [
         "flake.nix",
-        "README.md"
+        "README.md",
+        "pages/installation.md"
       ]
     }
   },
