feat: also add it for prompts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        elixir: [1.18.3]
+        elixir: [1.19.0-rc.0]
         otp: [27.3]
 
     steps:
@@ -72,7 +72,7 @@ jobs:
 
     strategy:
       matrix:
-        elixir: [1.18.3]
+        elixir: [1.19.0-rc.0]
         otp: [27.3]
 
     steps:
@@ -140,7 +140,7 @@ jobs:
 
     strategy:
       matrix:
-        elixir: [1.18.3]
+        elixir: [1.19.0-rc.0]
         otp: [27.3]
 
     steps:
