--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.18.3'
+          elixir-version: '1.19.0-rc.0'
           otp-version: '27.3'
       
       - name: Install dependencies
