chore: release please should include all files

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -59,14 +59,14 @@
       "hidden": false
     }
   ],
+  "extra-files": [
+    "flake.nix",
+    "README.md",
+    "pages/installation.md"
+  ],
   "packages": {
     ".": {
-      "release-type": "elixir",
-      "extra-files": [
-        "flake.nix",
-        "README.md",
-        "pages/installation.md"
-      ]
+      "release-type": "elixir"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
