--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,4 +182,4 @@ jobs:
         run: mix clean
 
       - name: Run tests
-        run: mix test --trace --warnings-as-errors
+        run: mix test --warnings-as-errors
